Java code cleaning